force-app/main/default/objects/Integration_Auth__mdt/Integration_Auth__mdt.object-meta.xml
<CustomObject>
    <label>Integration Auth</label>
    <pluralLabel>Integration Auths</pluralLabel>
    <description>Authentication configuration — Named Credential, OAuth2, API Key, Basic auth</description>
</CustomObject>