force-app/main/default/objects/Integration_Auth__mdt/fields/Auth_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Auth_Header_Name__c</fullName>
    <label>Auth Header Name</label>
    <type>Text</type>
    <length>255</length>
    <defaultValue>&quot;X-API-Key&quot;</defaultValue>
    <description>Custom header name for API key authentication</description>
</CustomField>