force-app/main/default/objects/Integration_Auth__mdt/fields/Auth_Type__c.field-meta.xml
<CustomField>
    <fullName>Auth_Type__c</fullName>
    <label>Auth Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Named_Credential</fullName><default>true</default><label>Named Credential</label></value>
            <value><fullName>OAuth2</fullName><default>false</default><label>OAuth2</label></value>
            <value><fullName>API_Key</fullName><default>false</default><label>API Key</label></value>
            <value><fullName>Basic</fullName><default>false</default><label>Basic</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Authentication type</description>
</CustomField>