force-app/main/default/objects/Integration_Auth__mdt/fields/Client_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Client_Id_Field__c</fullName>
    <label>Client Id Field</label>
    <type>Text</type>
    <length>255</length>
    <description>Custom Setting or protected field reference for client ID</description>
</CustomField>