force-app/main/default/objects/Integration_Auth__mdt/fields/Client_Secret_Field__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret_Field__c</fullName>
    <label>Client Secret Field</label>
    <type>Text</type>
    <length>255</length>
    <description>Custom Setting or protected field reference for client secret</description>
</CustomField>