force-app/main/default/objects/Integration_Auth__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>Text</type>
    <length>255</length>
    <description>OAuth scope string</description>
</CustomField>