force-app/main/default/objects/Integration_Auth__mdt/fields/Token_Cache_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Token_Cache_Seconds__c</fullName>
    <label>Token Cache Seconds</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <defaultValue>3600</defaultValue>
    <description>Token reuse duration in seconds</description>
</CustomField>