force-app/main/default/objects/Integration_Auth__mdt/fields/Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint__c</fullName>
    <label>Token Endpoint</label>
    <type>Url</type>
    <description>OAuth2 token URL</description>
</CustomField>